# TDS2-IMAC1

TDS2/: CMakeLists.txt
TDS2/TD1/src/: fraction.cpp  fraction.hpp  main.cpp  utils.cpp  utils.hpp
TDS2/TD2/exo1/: fonctions.hpp  fonctions_exo1.cpp  main.cpp
TDS2/TD2/exo2/: fonctions.hpp  fonctions_exo2.cpp  main.cpp
TDS2/TD2/exo3/: ScopedTimer.hpp  fonctions.hpp  fonctions_exo3.cpp  main.cpp
TDS2/TD2/exo4/: main.cpp
